--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,9 @@ body {
 
 .header {
   border-bottom: 1px solid var(--cornflower);
+  /* HW4 */
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .top-header {
@@ -120,6 +123,16 @@ li > .link:focus {
 .first-section {
   background-color: var(--navy-blue);
   padding: 188px 0;
+  /* HW4 */
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-img.jpg);
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .main-header {
@@ -200,6 +213,18 @@ li > .link:focus {
 
 .info-card {
   flex-basis: calc((100% - 72px) / 4);
+}
+
+/* HW4 */
+
+.icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: var(--cloud);
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 /* Third Section */
