--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,9 @@ li > .link:focus {
   background-color: var(--white);
   flex-basis: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
+  /* HW4 */
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .member-info {
@@ -286,6 +289,37 @@ li > .link:focus {
 }
 
 /* Reused item header from main  */
+
+/* HW4 */
+.socmed-info {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.socmed-items {
+  width: 40px;
+  height: 40px;
+}
+
+.socmed-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.socmed-link:hover,
+.socmed-link:focus {
+  background-color: var(--ocean);
+}
+
+.socmed-icon {
+  fill: var(--cloud);
+}
 
 /* FOOTER */
 
