--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ li > .link:focus {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/hero-img.jpg);
+  max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
