--- a/css/styles.css
+++ b/css/styles.css
@@ -129,10 +129,11 @@ li > .link:focus {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/hero-img.jpg);
-  max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  /* Need to add? */
+  max-width: 1440px;
 }
 
 .main-header {
